kubernetes/productivity/affine/affine-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: affine-postgres
  namespace: affine
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
spec:
  selector:
    app: affine-postgres
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
