kubernetes/productivity/affine/affine-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: affine-redis
  namespace: affine
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
spec:
  selector:
    app: affine-redis
  ports:
    - port: 6379
      targetPort: 6379
